Fixed text-field bug
Fixed a bug with the text-field where the color of the user's text was being overlapped with the color and animations of the placeholder text. Now this issue does not happen and the user's text color cannot be replaced due to adding a new tag in CSS that gets applied/removed in the script

--- a/Beta/BetaBuild/screen.css
+++ b/Beta/BetaBuild/screen.css
@@ -160,16 +160,19 @@ input[type="text"]:focus {
     font-weight: 900;
 }
 
-
 #customInput {
   transition: color 0.3s ease;
   color: transparent;
 }
 
-
 #customInput.placeholder-active {
   color: #aaa;
   opacity: 0.8;
+}
+
+#customInput.typing-active {
+    color: black;
+    opacity: 1;
 }
 
 
